--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@
     
 }
 
+
 /* About Section */
 #About .container {
     border-radius: 20px;
@@ -50,7 +51,9 @@
 
 .title {
     font-size: 5rem;
-    font-weight: bold;
+    
+    font-family: 'Alfa Slab One';
+
 }
 .title h2 {
     font-family: 'Alfa Slab One';
@@ -67,16 +70,45 @@
     background-color: #afafaf;
     border-radius: 20px;
 }
+.titles1 h2 {
+    font-size: 4rem;
+    font-family: 'Alfa Slab One';
+}
+.soft ul li {
+    font-size: 20px;
+}
+.titles1 h2:hover {
+    text-decoration: line-through white;
+}
 i {
     font-size: 100px;
     text-align: center;
 }
+.skills-item{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    border-radius: 20px;
+}
+ 
+.skills-item:hover{
+   color: white;
+   text-shadow: 2px 2px black;
+   background-color:#212529;
+   border: 3px solid white;
+}
 /* Contact section */
+#contact .container {
+    border-radius: 20px;
+}
 .Jumbotron {
     width: 100%;
     height: 500px;
-    background-image: url(./images/istockphoto-1307794659-170667a.jpg);
+    background-image: url(./images/josh-rose-trYl7JYATH0-unsplash.jpg);
+    background-size: cover;
     background-attachment: fixed;
+    border-radius: 20px;
 }
 
 .Jumbotron h1 {
@@ -90,6 +122,14 @@ i {
 #particles-js {
     background-color: black;
 }
+.map{
+    border: 5px solid #212529;
+    border-radius: 20px;
+}
+.map iframe{
+    border: 5px solid #212529;
+    border-radius: 20px;
+}
 
 /* .contact-details {
     height: 50vh;
@@ -97,7 +137,6 @@ i {
 } */
 /* Project */
 #project .container {
-    background-color: #afafaf;
     border-radius: 20px;
 }
 .project {
