--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,9 @@ form button:hover{
     #about h2 {
         font-size: 3rem;
     }
+    #testimonial h2 {
+        font-size: 2.5rem;
+    }
     .about_img {
         display: none;
     }
@@ -318,7 +321,7 @@ form button:hover{
         font-size: 2rem;
     }
     #contact {
-        padding: 10px;
+        padding: 20px;
     }
     #resume {
         padding: 20px;
@@ -327,6 +330,9 @@ form button:hover{
         display: none;
     }
     #skills {
+        padding: 20px;
+    }
+    #project {
         padding: 20px;
     }
     /* .row .skills-item{
